index.css
@import '@economist/component-typography';
@import '@economist/component-palette';
@import '@economist/component-grid';

@custom-media --header-viewport-big (width >= 36rem);
@custom-media --header-viewport-small (width <= 35.9999rem);

.header {
  font-size: 1rem;
  position: relative;
}

.header__mobile-image {
  height: 100%;
}

.header,
.header__mobile-image {
  background-repeat: no-repeat;
}

.header--small-mode .header__wrapper {
  height: var(--header-small-mode-height, 50px);
}

.header__wrapper {
  max-width: var(--site-max-width, 1190px);
  margin: 0 auto;
}

.header__content {
  max-width: calc(1rem*30);
  text-align: center;
}

.header__title {
  font-size: var(--text-size-step-5);
  line-height: var(--text-line-height-body-bold-on-step-5);
  letter-spacing: var(--text-letter-spacing-body-bold-on-step-5);
  font-weight: bold;
  font-family: 'Halifax Bold';
  margin: 0;
}

.header__title,
.header__title-link {
  color: var(--header__title-color, var(--color-thimphu));
}

.header--small-mode .header__title {
  padding: 0;
}
.header--small-mode .header__title-link {
  line-height: var(--header-small-mode-height, 50px);
}

.header__flytitle {
  font-size: var(--text-size-step--1);
  font-weight: lighter;
  font-family: 'Halifax Regular';
  color: var(--header__flytitle-color, var(--color-economist));
  margin-bottom: var(--grid-spacing-mouse);
  padding: var(--header__flytitle-padding-v, var(--grid-spacing-mouse)) var(--header__flytitle-padding-h, var(--grid-spacing-fox));
  padding-bottom: var(--header__flytitle-padding-bottom, 0);
  display: inline-block;
  background-color: var(--header__flytitle-background-color, color(var(--color-thimphu) a(-40%)));
}

.header__text {
  font-size: var(--text-size-step-0);
  line-height: var(--text-line-height-body-light-on-step-0);
  font-weight: lighter;
  font-family: 'Halifax Light';
  color: var(--header__text-color, var(--color-thimphu));
  margin-top: var(--header__text-margin-top, 0);
  vertical-align: middle;
}

@media (--header-viewport-small) {
  .header {
    background-image: none !important;
  }
  .header__wrapper {
    padding:  var(--header-padding-top, var(--grid-spacing-hedgehog)) var(--grid-gutter-m) var(--header-padding-bottom, 0);
    height: var(--header-height, 300px);
  }
  .header--large-mode .header__title {
    padding:
      var(--header__title-padding-top, var(--grid-spacing-rabbit))
      var(--header__title-padding-v, 15%)
      var(--header__title-padding-bottom, var(--grid-spacing-fox));
  }
  .header__flytitle {
    margin: auto;
  }
  .header__additional-element {
    margin-bottom: var(--header__additional-element-margin-top, 0);
  }
}
/* Desktop version */
@media (--header-viewport-big) {
  .header {
    height: var(--header-viewport-big-height, 300px);
  }
  .header__mobile-image {
    background-image: none !important;
  }
  .header__wrapper {
    padding:  var(--header-padding-top, var(--grid-spacing-hedgehog)) var(--grid-gutter-m) var(--header-padding-bottom, 0);
  }

  .header__content {
    width: 50%;
    margin-right: auto;
    text-align: left;
  }

  .header__text {
    width: 100%;  /* Fix for IE */
  }

  .header__title {
    margin-top: 0;
  }

  .header--large-mode .header__title {
    padding: var(--header__title-padding-top, var(--grid-spacing-mouse)) 0 var(--header__title-padding-bottom, var(--grid-spacing-fox));
  }
}

